# astra-dev

./: .gitignore
ai_project/: CMakeLists.txt  Makefile
catkin_ws/: a.out
catkin_ws/src/ros_astra_camera/launch/: astra_rgb.launch
catkin_ws/src/skeleton_follow/: CMakeLists.txt  package.xml
catkin_ws/src/skeleton_follow/launch/: markers.launch  skeleton.launch  skeleton_follow.launch
catkin_ws/src/skeleton_follow/nodes/: markers_from_skeleton_msg.py
catkin_ws/src/skeleton_follow/params/: SamplesConfig.xml
catkin_ws/src/skeleton_follow/rviz/: markers.rviz
catkin_ws/src/skeleton_follow/src/: main.cpp
catkin_ws/src/skeleton_markers/: CMakeLists.txt
catkin_ws/src/skeleton_markers/include/: xdo_version.h
catkin_ws/src/skeleton_markers/launch/: skeleton.launch
catkin_ws/src/skeleton_markers/msg/: Skeleton.msg
catkin_ws/src/skeleton_markers/nodes/: markers_from_skeleton_msg.py
catkin_ws/src/skeleton_markers/params/: marker_params.yaml
catkin_ws/src/skeleton_markers/src/: main.cpp  opencv_grb.cpp  skeleton_tracker.cpp
game/: list.txt
mouse_keyboard/: virtual_key_board_mouse.py
mouse_keyboard/xdo-tool/: Makefile  a.out  input_event.c  main.c  run.sh  xdo
